Validation added in user section. Login api completed.
