# app/Models/User.php
@@ -16,6 +16,9 @@ class User extends Authenticatable
         'name',
         'email',
         'password',
+        'dob',
+        'gender',
+        'mobile'
     ];
 
     /**
